<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>novatel_gps_driver</name>
  <version>3.4.0</version>
  <description>
  Driver for NovAtel receivers
  </description>

  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <maintainer email="evenator@swri.org">Ed Venator</maintainer>
  <maintainer email="kkozak@swri.org">Kris Kozak</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>boost</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>gps_common</depend>
  <depend>libpcap</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>novatel_gps_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>swri_math_util</depend>
  <depend>swri_nodelet</depend>
  <depend>swri_roscpp</depend>
  <depend>swri_serial_util</depend>
  <depend>swri_string_util</depend>
  <depend>tf</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
